fix: adjusted z-index

--- a/src/components/dashboardWrapper/dashboardWrapper.module.scss
+++ b/src/components/dashboardWrapper/dashboardWrapper.module.scss
@@ -102,6 +102,7 @@
   left: 0;
   width: 100%;
   height: 62px;
+  z-index: 2;
   > div {
     z-index: 100;
   }
@@ -177,7 +178,7 @@
   background-color: $neutral-200;
   min-height: calc(100vh - 62px);
   margin-top: 62px;
-  z-index: -1;
+  z-index: 1;
 }
 
 @media only screen and (min-width: 768px) {
